force-app/main/default/objects/SS_Survey_Share_Type__c/SS_Survey_Share_Type__c.object-meta.xml
<CustomObject>
    <label>Survey Share Type</label>
    <nameField>
        <displayFormat>TN-{000}</displayFormat>
        <label>Share Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Share Type</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>