force-app/main/default/objects/SS_Survey_Share_Type__c/fields/SS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>