force-app/main/default/objects/SS_Survey_Share_Type__c/fields/SS_Name__c.field-meta.xml
<CustomField>
    <fullName>SS_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>