force-app/main/default/objects/SS_Survey_Share_Type__c/fields/SS_Share_Type__c.field-meta.xml
<CustomField>
    <fullName>SS_Share_Type__c</fullName>
    <label>Share Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>