force-app/main/default/objects/SS_Survey_Share_Type__c/fields/SS_Status__c.field-meta.xml
<CustomField>
    <fullName>SS_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>