force-app/main/default/objects/SS_Survey_Share_Type__c/fields/SS_Survey__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>SS_Survey__c</referenceTo>
    <relationshipLabel>Survey Share Type</relationshipLabel>
    <relationshipName>Survey_Share_Type</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>